Add more styling

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <li>header link three</li>
         </ul>
     </div>
-    <div class="header info">
+    <div class="section">
         <main>This website is awesome</main>
         <div class="subtext">
             This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.
@@ -43,7 +43,7 @@
     </div>
     <div class="signup">
         <div class="container">
-            <h3>Call to action! It's time!</h3>
+            <div class="logo">Call to action! It's time!</div>
             <h4>Sign up for our product by clicking that button right over there!</h4>
             <button class="white">Sign up</button>
         </div>
