--- a/index.html
+++ b/index.html
@@ -6,34 +6,38 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="header">
-        <div class="logo">Header Logo</div>
-        <ul>
-            <li>header link one</li>
-            <li>header link two</li>
-            <li>header link three</li>
-        </ul>
-    </div>
-    <div class="section">
-        <div class="block">
-            <main>This website is awesome</main>
-            <div class="subtext">
-                This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.
-            </div>
-            <button>Sign up</button>
+    <div class="first">
+        <div class="header">
+            <div class="logo">Header Logo</div>
+            <ul>
+                <li>header link one</li>
+                <li>header link two</li>
+                <li>header link three</li>
+            </ul>
         </div>
-        <img class="first" src="cat.png">
+        <div class="section">
+            <div class="block">
+                <web>This website is awesome</web>
+                <div class="subtext">
+                    This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.
+                </div>
+                <button>Sign up</button>
+            </div>
+            <img class="cat" src="cat.png">
+        </div>
     </div>
     <div class="images">
         <h3>Some random information.</h3>
-        <img src=>
-        <caption>this is some subtext under an illustration or image</caption>
-        <img src=>
-        <caption>this is some subtext under an illustration or image</caption>
-        <img src=>
-        <caption>this is some subtext under an illustration or image</caption>
-        <img src=>
-        <caption>this is some subtext under an illustration or image</caption>
+        <div class="pictures">
+            <img src=>
+                <caption>this is some subtext under an illustration or image</caption>
+            <img src=>
+                <caption>this is some subtext under an illustration or image</caption>
+            <img src=>
+                <caption>this is some subtext under an illustration or image</caption>
+            <img src=>
+                <caption>this is some subtext under an illustration or image</caption>
+        </div>
     </div>
     <div class="quote">
         <div class="info">
@@ -45,8 +49,10 @@
     </div>
     <div class="signup">
         <div class="container">
-            <div class="logo">Call to action! It's time!</div>
-            <h4>Sign up for our product by clicking that button right over there!</h4>
+            <div class="reminder">
+                <div class="action">Call to action! It's time!</div>
+                <signup>Sign up for our product by clicking that button right over there!</signup>
+            </div>
             <button class="white">Sign up</button>
         </div>
     </div>
