Add images and styling

--- a/index.html
+++ b/index.html
@@ -23,20 +23,28 @@
                 </div>
                 <button>Sign up</button>
             </div>
-            <img class="cat" src="cat.png">
+            <img class="cat" src="cat.png" alt="Picture of a long cat">
         </div>
     </div>
     <div class="images">
         <h3>Some random information.</h3>
         <div class="pictures">
-            <img src=>
-                <caption>this is some subtext under an illustration or image</caption>
-            <img src=>
-                <caption>this is some subtext under an illustration or image</caption>
-            <img src=>
-                <caption>this is some subtext under an illustration or image</caption>
-            <img src=>
-                <caption>this is some subtext under an illustration or image</caption>
+            <div class="pic1">
+                <img src="pic1.png" alt="It's a cat!">
+                    <div class="cap">this is some subtext under an illustration or image</div>
+            </div>
+            <div class="pic2">
+                <img src="pic2.png" alt="It's another cat!">
+                    <div class="cap">this is some subtext under an illustration or image</div>
+            </div>
+            <div class="pic3">
+                <img src="pic3.png" alt="It's another cat!">
+                    <div class="cap">this is some subtext under an illustration or image</div>
+            </div>
+            <div class="pic4">
+                <img src="pic4.png" alt="It's another cat!">
+                    <div class="cap">this is some subtext under an illustration or image</div>
+            </div>
         </div>
     </div>
     <div class="quote">
